fix(account): fix RTL layout overlap in account center sections (#9023)
fix(account): use logical properties for RTL layout support

Replace physical padding-left with padding-inline-start and text-align: left
with text-align: start across account center sections to properly support
RTL languages like Arabic.

--- a/packages/account/src/pages/Security/DeleteAccountSection/index.module.scss
+++ b/packages/account/src/pages/Security/DeleteAccountSection/index.module.scss
@@ -7,7 +7,7 @@
 }
 
 .sectionTitle {
-  padding-left: _.unit(1);
+  padding-inline-start: _.unit(1);
   font: var(--font-label-2);
   color: var(--color-type-primary);
 }
@@ -64,7 +64,7 @@
 
 :global(body.mobile) {
   .sectionTitle {
-    padding-left: 0;
+    padding-inline-start: 0;
   }
 
   .row {
@@ -89,6 +89,6 @@
     align-self: flex-start;
     padding: 0;
     white-space: normal;
-    text-align: left;
+    text-align: start;
   }
 }
